about to try creating a namespace and may screw things up

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,12 +30,12 @@
       "imports": [
         "styles/partials/_normalize.scss",
         "styles/partials/_base.scss",
-        "styles/partials/_header.scss"
+        "styles/partials/_index.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
